bootstrap/kubernetes/apps/network/external-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
  namespace: external-services
spec:
  type: ExternalName
  externalName: 192.168.1.12
  ports:
    - port: 8043
      targetPort: 8043
      protocol: TCP
      name: https
